Fix: My Account overlapping header

--- a/Theme/Workspace/KDLPoshBeer/Modules/Header@sco-2018.1.0/Sass/_header-menu.scss
+++ b/Theme/Workspace/KDLPoshBeer/Modules/Header@sco-2018.1.0/Sass/_header-menu.scss
@@ -269,6 +269,7 @@
     opacity: 1;
     visibility: visible;
     height: auto;
+    top:120px;
 }
 
 .categories-thumbnail {
